4th tidy up (not finished)

--- a/notebooks/d_geosciences/High-Temperature Geochemistry/Evaporation_and_Condensation.ipynb
+++ b/notebooks/d_geosciences/High-Temperature Geochemistry/Evaporation_and_Condensation.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "Evaporation-condensation processes are of particular interest in stable isotope geochemistry because they generate large isotope effects. This is demonstrated in the figure below, which shows the $H$ and $O$ liquid/vapor fractionation factors $\\alpha$, as calculated from the ${^{18}O}/{^{16}O}$ and $D/H$ ratios of water vapor that is in equilibrium with liquid water. At equilibrium, the liquid is enriched in the heavy isotopes because “heavy water” (${H_2}^{18}O$, ${D_2}^{16}O$) has a lower vapor pressure than “light water” (${H_2}^{16}O$). The temperature dependence of the equilibrium isotope fractionation factors is also clearly visible in the diagram. \n",
     "\n",
-    "<img src=\"images/EC1.png\" style=\"width:450px;height:500px\" align=\"center\"/>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/EC1.png\" style=\"width:450px;height:500px\"/></p>\n",
     "\n",
     "```{index} Rayleigh equation\n",
     "```\n",
@@ -222,7 +222,7 @@
     "\n",
     "A “natural” example of this is the fractionation of $O$ isotopes between the water vapor of a cloud and the raindrops that are formed in and released from the cloud. With decreasing temperature, the $\\delta^{18}O$ values of the condensate decreases, because the fraction of vapor remaining decreases (even though $\\alpha$ increases).\n",
     "\n",
-    "<img src=\"images/EC2.png\" style=\"width:350px;height:500px\" align=\"center\"/>\n"
+    "<p style=\"text-align:center;\"><img src=\"images/EC2.png\" style=\"width:350px;height:500px\"/></p>\n"
    ]
   },
   {
