--- a/notebooks/d_geosciences/High-Temperature Geochemistry/Melting_and_Crystalisation.ipynb
+++ b/notebooks/d_geosciences/High-Temperature Geochemistry/Melting_and_Crystalisation.ipynb
@@ -434,7 +434,7 @@
     "\n",
     "Fractional crystallization has a dramatic effect on compatible element abundances, as these are rapidly depleted in the melt.\n",
     "\n",
-    "Incompatible elements ($D < 1$) are enriched in the remaining melt, by a factor that is the inverse to the amount of liquid remaining. Hence, they do not change greatly in concentration until >90% of the magma has crystallized."
+    "Incompatible elements ($D < 1$) are enriched in the remaining melt, by a factor that is the inverse to the amount of liquid remaining. Hence, they do not change greatly in concentration until >$90\\%$ of the magma has crystallized."
    ]
   },
   {
