--- a/notebooks/d_geosciences/High-Temperature Geochemistry/Nuclides.ipynb
+++ b/notebooks/d_geosciences/High-Temperature Geochemistry/Nuclides.ipynb
@@ -67,14 +67,14 @@
     "\n",
     "Example:\n",
     "\n",
-    "<img src=\"images/N1.png\" style=\"width:350px;height:100px\" align=\"center\"/>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/N1.png\" style=\"width:350px;height:100px\"/></p>\n",
     "\n",
     "The chart of nuclides groups the isotopes in a plot of proton number $Z$ vs. neutron number $N$. The chart provides information on all $264$ known stable isotopes, long-lived radioactive nuclides, and a large number of short and very short-lived radioactive nuclides. The top figure is only a\n",
     "small excerpt from the complete chart at the bottom!\n",
     "\n",
-    "<img src=\"images/N2.png\" style=\"width:500px;height:450px\" align=\"center\"/>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/N2.png\" style=\"width:500px;height:450px\"/></p>\n",
     "\n",
-    "<img src=\"images/N3.png\" style=\"width:500px;height:400px\" align=\"center\"/>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/N3.png\" style=\"width:500px;height:400px\" align=\"center\"/></p>\n",
     "\n",
     "Note that:\n",
     "\n",
@@ -226,7 +226,7 @@
     "   * $^{207}Pb:\\,15\\%$\n",
     "   * $^{208}Pb:\\,45\\%$\n",
     "\n",
-    "What is the atomic weight of the Pb? Note that this calculation is straightforward because the isotope abundances are given in atomic/molar-% (as is customary) rather than in weight-%."
+    "What is the atomic weight of the $Pb$? Note that this calculation is straightforward because the isotope abundances are given in atomic/molar-% (as is customary) rather than in weight-%."
    ]
   },
   {
