--- a/notebooks/d_geosciences/High-Temperature Geochemistry/Rb-Sr_Decay.ipynb
+++ b/notebooks/d_geosciences/High-Temperature Geochemistry/Rb-Sr_Decay.ipynb
@@ -103,7 +103,7 @@
     "   \n",
     "Such a system can be readily visualized. In the example below, there are 3 minerals that crystallized from the melt. They started off with identical $Sr$ isotope compositions and variable ${^{87}Rb}/{^{86}}Sr$ ratios. After some time (and radioactive decay), ${^{87}Sr}/{^{86}Sr}$ has increased due to decay of $^{87}Rb$ to $^{87}Sr$. The mineral with the highest ${^{87}Rb}/{^{86}Sr}$ ratio then displays the highest (most radiogenic) ${^{87}Sr}/{^{86}}Sr$ ratio.\n",
     "\n",
-    "<img src=\"images/RbSr1.png\" style=\"width:450px;height:500px\" align=\"center\"/>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/RbSr1.png\" style=\"width:450px;height:500px\"/></p>\n",
     "\n",
     "Remember the equation:\n",
     "\n",
@@ -138,7 +138,7 @@
     "\n",
     "Igneous differentiation is associated with increasing $Rb/Sr$ ratios when $Sr$ is removed from the melt by the crystallization of plagioclase whilst $Rb$ remains in the melt. Suites of differentiated igneous rocks therefore tend to have increasing $Rb/Sr$ ratios with increasing degree of differentiation. As a result, acidic rocks often have variable and generally high $Rb/Sr$ ratios of >$1$ (${^{87}Rb}{^{86}Sr}>\\,\\sim2.9$). Such rocks, and their metamorphic equivalents are therefore, in principle, well suited for dating with the $Rb$-$Sr$ system. $Sr$ and particularly $Rb$ are fluid-mobile elements, leading to complications in Rb/Sr dating can arise from (even) low-temperature aqueous alteration of the samples. The figure below shows $Rb$ vs. $Sr$ concentrations for various mafic, intermediate, and acidic igneous rocks. Igneous differentiation generates magmas with high $Rb$ contents combined with high $Rb/Sr$ ratios, and low $Sr$ concentrations (fractionation of plagioclase).\n",
     "\n",
-    "<img src=\"images/RbSr2.png\" style=\"width:550px;height:400px\" align=\"center\"/>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/RbSr2.png\" style=\"width:550px;height:400px\"/></p>\n",
     "\n",
     "### Dating of Igneous Rocks\n",
     "\n",
@@ -156,7 +156,7 @@
     "\n",
     "The figure below is an isotope evolution diagram over time from protolith formation to present-day. \n",
     "\n",
-    "<img src=\"images/RbSr3.png\" style=\"width:450px;height:380px\" align=\"center\"/>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/RbSr3.png\" style=\"width:450px;height:380px\"/></p>\n",
     "\n",
     "The isotopic evolution of a metamorphic rock can be described step-by-step as follows.\n",
     "\n",
