--- a/notebooks/d_geosciences/High-Temperature Geochemistry/Sm-Nd_Decay.ipynb
+++ b/notebooks/d_geosciences/High-Temperature Geochemistry/Sm-Nd_Decay.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "## Dating of Terrestrial Rocks\n",
     "\n",
-    "The continental crust in general and siliceous rocks in particular have low and relatively uniform $Sm/Nd$ ratios (= parent/daughter ratio), so the $Sm$-$Nd$ system is not particularly suitable for dating such rocks. On the other hand, mafic and ultramafic rocks have variable and high $Sm/Nd$ ratios, so they are good candidates for Sm-Nd dating. \n",
+    "The continental crust in general and siliceous rocks in particular have low and relatively uniform $Sm/Nd$ ratios (= parent/daughter ratio), so the $Sm$-$Nd$ system is not particularly suitable for dating such rocks. On the other hand, mafic and ultramafic rocks have variable and high $Sm/Nd$ ratios, so they are good candidates for $Sm$-$Nd$ dating. \n",
     "\n",
     "Due to the fluid immobility of the $REEs$, $Sm$-$Nd$ ages and initial $Nd$ isotope compositions are not very sensitive to weathering and metamorphism. \n",
     "\n",
