--- a/notebooks/d_geosciences/Gravity, Magnetism, and Orbital Dynamics/Keplerian_Orbits.ipynb
+++ b/notebooks/d_geosciences/Gravity, Magnetism, and Orbital Dynamics/Keplerian_Orbits.ipynb
@@ -27,7 +27,7 @@
     "The gravity force between two point masses is described as\n",
     "\n",
     "$$F_G =-G\\frac{mM}{r^2}\\hat{\\mathbf{r}},$$\n",
-    "where $r$ is the distance between these masses, G is a gravitational constant $G=6.674210\\times 10^{-11}$ m$^3$kg$^{-1}$s$^{-2}$ and $\\hat{\\mathbf{r}}$ is the unit vector in the direction of two point masses.\n",
+    "where $r$ is the distance between these masses, $G$ is a gravitational constant $G=6.674210\\times 10^{-11} m^3 kg^{-1} s^{-2}$ and $\\hat{\\mathbf{r}}$ is the unit vector in the direction of two point masses.\n",
     "\n",
     "For two mutually gravitating bodies, an analytical solution to Kepler's first law exists. The equation of motion in Cartesian coordinates is:\n",
     "\n",
@@ -35,20 +35,15 @@
     "\n",
     "The analytical solution to this equation reveals trajectories of bodies to be of conical sections:\n",
     "\n",
-    "```{figure} ../images/conic_sections.png\n",
-    ":width: 300px\n",
-    "```\n",
+    "<p style=\"text-align:center;\"><img src=\"images/conic_sections.png\" style=\"width:300px;height:330px\" align=\"center\"/></p>\n",
     "\n",
     "For three body problem, only in restricted cases analytical solutions can be found. One of such cases is when a test particle is placed in a system that does not move with respect to the centre of mass of the system and does not rotate with respect to itself:\n",
     "\n",
-    "```{figure} ../images/restricted_three_body_problem.PNG\n",
-    ":width: 400px\n",
-    "```\n",
+    "<p style=\"text-align:center;\"><img src=\"images/restricted_three_body_problem.png\" style=\"width:400px;height:200px\" align=\"center\"/></p>\n",
+    "\n",
     "The solution to this problem reveals Lagrangian equilibrium points, where the test particle will maintain its position relative to larger bodies:\n",
     "\n",
-    "```{figure} ../images/lagrangian_points.PNG\n",
-    ":width: 400px\n",
-    "```\n",
+    "<p style=\"text-align:center;\"><img src=\"images/lagrangian_points.png\" style=\"width:400px;height:400px\" align=\"center\"/></p>\n",
     "\n",
     "## Restricted three-body problem - numerical solution\n",
     "\n",
@@ -75,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At first, let's define masses of our bodies, constants such as radius of planet's orbit and position vectors with Sun placed at [0, 0]. The planet will be placed along the x-axis and the test particle will be placed at 60$^\\circ$ from the Sun."
+    "At first, let's define masses of our bodies, constants such as radius of planet's orbit and position vectors with Sun placed at $[0, 0]$. The planet will be placed along the x-axis and the test particle will be placed at $60^\\circ$ from the Sun."
    ]
   },
   {
@@ -852,7 +847,7 @@
    "source": [
     "## Adding perturbations\n",
     "\n",
-    "If we increase Earth's mass by a factor of 1000, we obtain a much wider orbit:"
+    "If we increase Earth's mass by a factor of $1000$, we obtain a much wider orbit:"
    ]
   },
   {
