--- a/notebooks/d_geosciences/Low-Temperature Geochemistry/CO2_H2O_System.ipynb
+++ b/notebooks/d_geosciences/Low-Temperature Geochemistry/CO2_H2O_System.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "hide-input"
@@ -35,6 +35,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "MathJax.Hub.Config({\n",
+       "    TeX: { equationNumbers: { autoNumber: \"AMS\" } }\n",
+       "});\n",
+       "MathJax.Hub.Queue(\n",
+       "  [\"resetEquationNumbers\", MathJax.InputJax.TeX],\n",
+       "  [\"PreProcess\", MathJax.Hub],\n",
+       "  [\"Reprocess\", MathJax.Hub]\n",
+       ");\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%javascript\n",
+    "MathJax.Hub.Config({\n",
+    "    TeX: { equationNumbers: { autoNumber: \"AMS\" } }\n",
+    "});\n",
+    "MathJax.Hub.Queue(\n",
+    "  [\"resetEquationNumbers\", MathJax.InputJax.TeX],\n",
+    "  [\"PreProcess\", MathJax.Hub],\n",
+    "  [\"Reprocess\", MathJax.Hub]\n",
+    ");"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -44,44 +85,29 @@
     "\n",
     "$$H_2CO_3 = HCO_{3}^{-} + H^+$$\n",
     "\n",
-    "\\begin{equation*} \n",
-    "K_1 = \\frac{a_{H^+} \\cdot a_{HCO_{3}^{-}}}{a_{H_2CO_3}} = 10^{-6.35}\n",
-    "\\label{dis_H2CO3} \\tag{1}\n",
-    "\\end{equation*}\n",
+    "$$K_1 = \\frac{a_{H^+} \\cdot a_{HCO_{3}^{-}}}{a_{H_2CO_3}} = 10^{-6.35}$$ (eq1)\n",
     "\n",
     "(2) $HCO_{3}^{-}$ dissociates to form hydrogen ions and carbonate ions ($CO_{3}^{2-}$)\n",
     "\n",
     "$$HCO_{3}^{-} = CO_{3}^{2-} + H^+$$\n",
     "\n",
-    "\\begin{equation*} \n",
-    " K_2 = \\frac{a_{H^+} \\cdot a_{CO_{3}^{2-}}}{a_{HCO_{3}^{-}}} = 10^{-10.33}\n",
-    "\\label{dis_HCO3} \\tag{2}\n",
-    "\\end{equation*}\n",
+    "$$K_2 = \\frac{a_{H^+} \\cdot a_{CO_{3}^{2-}}}{a_{HCO_{3}^{-}}} = 10^{-10.33}$$ (eq2)\n",
     "\n",
     "(3) Dissociation of water\n",
     "\n",
     "$$H_2O = H^+ + OH^-$$\n",
     "\n",
-    "\\begin{equation*} \n",
-    " K_W = \\frac{a_{H^+} \\cdot a_{OH^-}}{a_{H_2O}} = 10^{-14}\n",
-    "\\label{dis_H2O} \\tag{3}\n",
-    "\\end{equation*}\n",
+    "$$K_W = \\frac{a_{H^+} \\cdot a_{OH^-}}{a_{H_2O}} = 10^{-14}$$ (eq3)\n",
     "\n",
     "(4) Charge balance (all solutions are electrically neutral). Note that we need to balance concentrations ($m$), not activities ($a$), as concentrations represent actual quantities of ions.\n",
     "\n",
-    "\\begin{equation*} \n",
-    " m_{H^+} = m_{HCO_{3}^{-}} + 2m_{CO_{3}^{2-}} + m_{OH^-}\n",
-    "\\label{charge_balance} \\tag{4}\n",
-    "\\end{equation*}\n",
+    "$$m_{H^+} = m_{HCO_{3}^{-}} + 2m_{CO_{3}^{2-}} + m_{OH^-}$$ (eq4)\n",
     "\n",
-    "Now we have 5 unknowns ($m_{H^+}, m_{H_2CO_3}, m_{HCO_{3}^{-}}, m_{CO_{3}^{2-}}, m_{OH^-}$) but only 4 equations. We need the fifth equation in order to solve the simultaneous equations. Fortunately, we can get it from the boundary conditions, i.e. what we know about the system.\n",
+    "Now we have $5$ unknowns ($m_{H^+}, m_{H_2CO_3}, m_{HCO_{3}^{-}}, m_{CO_{3}^{2-}}, m_{OH^-}$) but only $4$ equations. We need the fifth equation in order to solve the simultaneous equations. Fortunately, we can get it from the boundary conditions, i.e. what we know about the system.\n",
     "\n",
     "For a closed system, the boundary condition is that the total amount of $CO_2$ in the system is fixed. As $H_2CO_3$, $HCO_{3}^{-}$, and $CO_{3}^{2-}$ form when $CO_2$ dissolves in water, so\n",
     "\n",
-    "\\begin{equation*} \n",
-    "m_{total} = m_{H_2CO_3} + m_{HCO_{3}^{-}} + m_{CO_{3}^{2-}} \n",
-    "\\label{closed_sys_boundary} \\tag{5}\n",
-    "\\end{equation*}\n",
+    "$$m_{total} = m_{H_2CO_3} + m_{HCO_{3}^{-}} + m_{CO_{3}^{2-}} $$ (eq5)\n",
     "\n",
     "Recalling the relationship between concentration and activity:\n",
     "\n",
@@ -93,21 +119,15 @@
     "\n",
     "$$pH = -\\log(m_{H^+}) \\quad \\longrightarrow \\quad m_{H^+}=10^{-pH}$$\n",
     "\n",
-    "From $\\eqref{dis_H2CO3}$, $m_{H^+}=10^{-pH}$, rearranging it and using the assumption, we get:\n",
+    "From {eq}`eq1`, $m_{H^+}=10^{-pH}$, rearranging it and using the assumption, we get:\n",
     "\n",
-    "\\begin{equation*} \n",
-    "m_{HCO_{3}^{-}} = \\frac{K_1 \\cdot m_{H_2CO_3}}{10^{-pH}}\n",
-    "\\label{m_HCO3} \\tag{1'}\n",
-    "\\end{equation*}\n",
+    "$$m_{HCO_{3}^{-}} = \\frac{K_1 \\cdot m_{H_2CO_3}}{10^{-pH}}$$ (eq1')\n",
     "\n",
-    "From $m_{H^+}=10^{-pH}$, $\\eqref{dis_HCO3}$ and $\\eqref{m_HCO3}$, using the assumption, we get:\n",
+    "From $m_{H^+}=10^{-pH}$, {eq}`eq2` and {eq}`eq1'`, using the assumption, we get:\n",
     "\n",
-    "\\begin{equation*} \n",
-    "m_{CO_{3}^{2-}} = \\frac{K_2 \\cdot K_1 \\cdot m_{H_2CO_3}}{10^{-2 \\cdot pH}}\n",
-    "\\label{m_CO3} \\tag{2'}\n",
-    "\\end{equation*}\n",
+    "$$m_{CO_{3}^{2-}} = \\frac{K_2 \\cdot K_1 \\cdot m_{H_2CO_3}}{10^{-2 \\cdot pH}}$$ (eq2')\n",
     "\n",
-    "Substituting $\\eqref{m_HCO3}$ and $\\eqref{m_CO3}$ into $\\eqref{closed_sys_boundary}$, we get:\n",
+    "Substituting {eq}`eq1'` and {eq}`eq2'` into {eq}`eq5`, we get:\n",
     "\n",
     "$$m_{total} = m_{H_2CO_3} + \\frac{K_1 \\cdot m_{H_2CO_3}}{10^{-pH}} + \\frac{K_2 \\cdot K_1 \\cdot m_{H_2CO_3}}{10^{-2 \\cdot pH}}$$\n",
     "\n",
@@ -121,39 +141,30 @@
     "\n",
     "So,\n",
     "\n",
-    "\\begin{equation*} \n",
-    "m_{H_2CO_3} = \\frac{m_{total}}{F_H}\n",
-    "\\label{m_H2CO3_final} \\tag{a}\n",
-    "\\end{equation*}\n",
+    "$$m_{H_2CO_3} = \\frac{m_{total}}{F_H}$$ (eqa)\n",
     "\n",
-    "Substituting $\\eqref{m_H2CO3_final}$ into $\\eqref{m_HCO3}$ and $\\eqref{m_CO3}$, we get:\n",
+    "Substituting {eq}`eqa` into {eq}`eq1'` and {eq}`eq2'`, we get:\n",
     "\n",
-    "\\begin{equation*} \n",
-    "m_{HCO_{3}^{-}} = \\frac{m_{total} \\cdot K_1}{F_H \\cdot 10^{-pH}}\n",
-    "\\label{m_HCO3_final} \\tag{b}\n",
-    "\\end{equation*}\n",
+    "$$m_{HCO_{3}^{-}} = \\frac{m_{total} \\cdot K_1}{F_H \\cdot 10^{-pH}}$$ (eqb)\n",
     "\n",
-    "\\begin{equation*} \n",
-    "m_{CO_{3}^{2-}} = \\frac{m_{total} \\cdot K_2 \\cdot K_1}{F_H \\cdot 10^{-2 \\cdot pH}}\n",
-    "\\label{m_CO3_final} \\tag{c}\n",
-    "\\end{equation*}\n",
+    "$$m_{CO_{3}^{2-}} = \\frac{m_{total} \\cdot K_2 \\cdot K_1}{F_H \\cdot 10^{-2 \\cdot pH}}$$ (eqc)\n",
     "\n",
-    "The derivations of $\\eqref{m_H2CO3_final}$, $\\eqref{m_HCO3_final}$ and $\\eqref{m_CO3_final}$ lead to the speciation of the carbon system as a\n",
+    "The derivations of {eq}`eqa`, {eq}`eqb` and {eq}`eqc` lead to the speciation of the carbon system as a\n",
     "function of $pH$, as shown below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x208270a7fa0>"
+       "<matplotlib.legend.Legend at 0x20e88a4a640>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -427,16 +438,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x208272cfa00>"
+       "<matplotlib.legend.Legend at 0x20e88c70340>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -494,63 +505,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_7c516_\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >T (C)</th>        <th class=\"col_heading level0 col1\" >pK1</th>        <th class=\"col_heading level0 col2\" >pK2</th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_22de9_\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >T (C)</th>        <th class=\"col_heading level0 col1\" >pK1</th>        <th class=\"col_heading level0 col2\" >pK2</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                                <td id=\"T_7c516_row0_col0\" class=\"data row0 col0\" >0</td>\n",
-       "                        <td id=\"T_7c516_row0_col1\" class=\"data row0 col1\" >6.58</td>\n",
-       "                        <td id=\"T_7c516_row0_col2\" class=\"data row0 col2\" >10.63</td>\n",
+       "                                <td id=\"T_22de9_row0_col0\" class=\"data row0 col0\" >0</td>\n",
+       "                        <td id=\"T_22de9_row0_col1\" class=\"data row0 col1\" >6.58</td>\n",
+       "                        <td id=\"T_22de9_row0_col2\" class=\"data row0 col2\" >10.63</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_7c516_row1_col0\" class=\"data row1 col0\" >5</td>\n",
-       "                        <td id=\"T_7c516_row1_col1\" class=\"data row1 col1\" >6.52</td>\n",
-       "                        <td id=\"T_7c516_row1_col2\" class=\"data row1 col2\" >10.55</td>\n",
+       "                                <td id=\"T_22de9_row1_col0\" class=\"data row1 col0\" >5</td>\n",
+       "                        <td id=\"T_22de9_row1_col1\" class=\"data row1 col1\" >6.52</td>\n",
+       "                        <td id=\"T_22de9_row1_col2\" class=\"data row1 col2\" >10.55</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_7c516_row2_col0\" class=\"data row2 col0\" >10</td>\n",
-       "                        <td id=\"T_7c516_row2_col1\" class=\"data row2 col1\" >6.46</td>\n",
-       "                        <td id=\"T_7c516_row2_col2\" class=\"data row2 col2\" >10.49</td>\n",
+       "                                <td id=\"T_22de9_row2_col0\" class=\"data row2 col0\" >10</td>\n",
+       "                        <td id=\"T_22de9_row2_col1\" class=\"data row2 col1\" >6.46</td>\n",
+       "                        <td id=\"T_22de9_row2_col2\" class=\"data row2 col2\" >10.49</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_7c516_row3_col0\" class=\"data row3 col0\" >15</td>\n",
-       "                        <td id=\"T_7c516_row3_col1\" class=\"data row3 col1\" >6.42</td>\n",
-       "                        <td id=\"T_7c516_row3_col2\" class=\"data row3 col2\" >10.43</td>\n",
+       "                                <td id=\"T_22de9_row3_col0\" class=\"data row3 col0\" >15</td>\n",
+       "                        <td id=\"T_22de9_row3_col1\" class=\"data row3 col1\" >6.42</td>\n",
+       "                        <td id=\"T_22de9_row3_col2\" class=\"data row3 col2\" >10.43</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_7c516_row4_col0\" class=\"data row4 col0\" >20</td>\n",
-       "                        <td id=\"T_7c516_row4_col1\" class=\"data row4 col1\" >6.38</td>\n",
-       "                        <td id=\"T_7c516_row4_col2\" class=\"data row4 col2\" >10.38</td>\n",
+       "                                <td id=\"T_22de9_row4_col0\" class=\"data row4 col0\" >20</td>\n",
+       "                        <td id=\"T_22de9_row4_col1\" class=\"data row4 col1\" >6.38</td>\n",
+       "                        <td id=\"T_22de9_row4_col2\" class=\"data row4 col2\" >10.38</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_7c516_row5_col0\" class=\"data row5 col0\" >25</td>\n",
-       "                        <td id=\"T_7c516_row5_col1\" class=\"data row5 col1\" >6.35</td>\n",
-       "                        <td id=\"T_7c516_row5_col2\" class=\"data row5 col2\" >10.33</td>\n",
+       "                                <td id=\"T_22de9_row5_col0\" class=\"data row5 col0\" >25</td>\n",
+       "                        <td id=\"T_22de9_row5_col1\" class=\"data row5 col1\" >6.35</td>\n",
+       "                        <td id=\"T_22de9_row5_col2\" class=\"data row5 col2\" >10.33</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_7c516_row6_col0\" class=\"data row6 col0\" >30</td>\n",
-       "                        <td id=\"T_7c516_row6_col1\" class=\"data row6 col1\" >6.33</td>\n",
-       "                        <td id=\"T_7c516_row6_col2\" class=\"data row6 col2\" >10.29</td>\n",
+       "                                <td id=\"T_22de9_row6_col0\" class=\"data row6 col0\" >30</td>\n",
+       "                        <td id=\"T_22de9_row6_col1\" class=\"data row6 col1\" >6.33</td>\n",
+       "                        <td id=\"T_22de9_row6_col2\" class=\"data row6 col2\" >10.29</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_7c516_row7_col0\" class=\"data row7 col0\" >45</td>\n",
-       "                        <td id=\"T_7c516_row7_col1\" class=\"data row7 col1\" >6.29</td>\n",
-       "                        <td id=\"T_7c516_row7_col2\" class=\"data row7 col2\" >10.20</td>\n",
+       "                                <td id=\"T_22de9_row7_col0\" class=\"data row7 col0\" >45</td>\n",
+       "                        <td id=\"T_22de9_row7_col1\" class=\"data row7 col1\" >6.29</td>\n",
+       "                        <td id=\"T_22de9_row7_col2\" class=\"data row7 col2\" >10.20</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_7c516_row8_col0\" class=\"data row8 col0\" >60</td>\n",
-       "                        <td id=\"T_7c516_row8_col1\" class=\"data row8 col1\" >6.29</td>\n",
-       "                        <td id=\"T_7c516_row8_col2\" class=\"data row8 col2\" >10.14</td>\n",
+       "                                <td id=\"T_22de9_row8_col0\" class=\"data row8 col0\" >60</td>\n",
+       "                        <td id=\"T_22de9_row8_col1\" class=\"data row8 col1\" >6.29</td>\n",
+       "                        <td id=\"T_22de9_row8_col2\" class=\"data row8 col2\" >10.14</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x208270df6d0>"
+       "<pandas.io.formats.style.Styler at 0x20e88cd9040>"
       ]
      },
      "metadata": {},
@@ -577,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
